; ModuleID = '/home/carl/AnghaBench/curl/src/extr_tool_paramhlp.c_add2list.c'
source_filename = "/home/carl/AnghaBench/curl/src/extr_tool_paramhlp.c_add2list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.curl_slist = type { i32 }

@PARAM_NO_MEM = common dso_local global i32 0, align 4
@PARAM_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @add2list(%struct.curl_slist** %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.curl_slist**, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.curl_slist*, align 8
  store %struct.curl_slist** %0, %struct.curl_slist*** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load %struct.curl_slist**, %struct.curl_slist*** %4, align 8
  %8 = load %struct.curl_slist*, %struct.curl_slist** %7, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call %struct.curl_slist* @curl_slist_append(%struct.curl_slist* %8, i8* %9)
  store %struct.curl_slist* %10, %struct.curl_slist** %6, align 8
  %11 = load %struct.curl_slist*, %struct.curl_slist** %6, align 8
  %12 = icmp ne %struct.curl_slist* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %2
  %14 = load %struct.curl_slist*, %struct.curl_slist** %6, align 8
  %15 = load %struct.curl_slist**, %struct.curl_slist*** %4, align 8
  store %struct.curl_slist* %14, %struct.curl_slist** %15, align 8
  br label %18

16:                                               ; preds = %2
  %17 = load i32, i32* @PARAM_NO_MEM, align 4
  store i32 %17, i32* %3, align 4
  br label %20

18:                                               ; preds = %13
  %19 = load i32, i32* @PARAM_OK, align 4
  store i32 %19, i32* %3, align 4
  br label %20

20:                                               ; preds = %18, %16
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local %struct.curl_slist* @curl_slist_append(%struct.curl_slist*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
